1998-03-14  Ulrich Drepper  <drepper@cygnus.com>

	* string/tester.c (main): Update strsep tests from 2.1.

	* sysdeps/unix/sysv/linux/alpha/ioperm.c: Remove selection of
	instruction set here.
	* sysdeps/unix/sysv/linux/alpha/Makefile (CFLAGS-ioperm.c): Define
	to set needed instruction set.
	Patches by Richard Henderson.

	* locale/programs/linereader.c (lr_token): Return EOF token at EOF.
	(get_toplvl_escape): Correctly terminate loop at EOF.
	Patch by Cristian Gafton <gafton@redhat.com>.

1998-03-13 17:39  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/generic/strsep.c: Correct handling of separators after
	last non-separator.

1998-03-13  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/i386/fpu/__math.h (atan2): Take over code from glibc
	2.1.

1998-03-12 14:24  Ulrich Drepper  <drepper@cygnus.com>

	* elf/dlerror.c (last_object_name): Removed.
	(dlerror): Don't use last_object_name.
	(_dl_error_run): Omit second argument to _dl_catch_error.
	* elf/dl-error.c (struct catch): Remove objname member.
	(_dl_signal_error): Construct string including objname when given.
	(_dl_catch_error): Remove objname handling.
	* elf/link.h (_dl_catch_error): Fix prototype and comment.
	* elf/rtld.c (dl_main): Call _dl_catch_error correctly.
	* elf/dl-deps.c (_dl_map_objet_deps): Likewise.
	* nss/nsswitch.c (nss_dlerror_run): Likewise.
	[Corrects PR libc/501].

1998-03-12  Ulrich Drepper  <drepper@cygnus.com>

	* elf/rtld.c (dl_main): Install link maps for preloaded objects
	using main_map as loader.

1998-02-23 12:33  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/i386/__longjmp.S: Fix race condition.
	Reported by Bruno Haible <haible@ilog.fr>.

1998-03-12  Ulrich Drepper  <drepper@cygnus.com>

	* nss/nss_db/db-XXX.c (lookup): Copy data to safe place before
	parsing it.

	* elf/dl-close.c (_dl_close): Applied changes from 2.1 to correct
	unmapping.

1998-03-10  Ulrich Drepper  <drepper@cygnus.com>

	* elf/rtld.c (_dl_library_path): New variable.  Initialize from