@@ -1,3 +1,8 @@
+Mon Mar 16 10:49:57 1998  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>
+
+	* sysdeps/m68k/fpu/__math.h (__ieee754_atan2): Reorder conditions
+	to handle x = 0 or y = 0 correctly.
+
 1998-03-14  Ulrich Drepper  <drepper@cygnus.com>
 
 	* string/tester.c (main): Update strsep tests from 2.1.
